--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
       {% endif %}
       {% if site.show_downloads %}
         <a href=" https://github.com/raykakarimi/DF-SSmVEP-videos " class="btn">Videos 
-        <a href="raykakarimi/DFSSMVEP/blob/gh-pages/Demographics.pdf" class="btn">Demographics
+        <a href="https://github.com/raykakarimi/DFSSMVEP/blob/gh-pages/Demographics.pdf" class="btn">Demographics
       {% endif %}
     </header>
 
