--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
       {% if site.show_downloads %}
         <a href="https://github.com/raykakarimi/DFSSMVEP/tree/gh-pages/Videos " class="btn">Videos 
         <a href="https://github.com/raykakarimi/DFSSMVEP/blob/gh-pages/Demographics.pdf" class="btn">Demographics
+          <a href="https://github.com/raykakarimi/DFSSMVEP/tree/gh-pages/Dataset" class="btn"> Dataset
           <a href= "https://github.com/raykakarimi/DFSSMVEP/tree/gh-pages/Codes" class="btn"> Codes
       {% endif %}
     </header>
